<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">AirDrop</string>
    <string name="default_web_client_id" translatable="false">967656059104-id80ga1gm6u5q0fgh53ei4sloqhphdka.apps.googleusercontent.com</string>
    <string name="airdrop" translatable="false">AIRDROP</string>
    <string name="e_mail">E-MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or">OR</string>
    <string name="sign_up">SIGN UP</string>
    <string name="your_id">YOUR ID:</string>
    <string name="tap_to_select_file">TAP TO SELECT FILE</string>
    <string name="receive">RECEIVE</string>
    <string name="send">SEND</string>
    <string name="log_out">LOG OUT</string>
    <string name="send_file">SEND FILE</string>
    <string name="enter_recipient_id">ENTER RECIPIENT ID</string>
    <string name="recipient_id">RECIPIENT ID</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="receive_file">RECEIVE FILE</string>
    <string name="enter_sender_id">ENTER SENDER ID</string>
    <string name="sender_id">SENDER ID</string>
    <string name="receiving_file">RECEIVING FILE…</string>
    <string name="sending">SENDING</string>
    <string name="error">Error: %s</string>
    <string name="password_length">Password must be at least 6 characters</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="fill_in_fields">Fill in all fields</string>
    <string name="file_is_selected">"The file is selected: "</string>
    <string name="file_is_no_longer_selected">The file is no longer selected</string>
    <string name="failed_to_load_id">"Failed to load ID: "</string>
    <string name="select_the_file">Select the file!</string>
    <string name="id_copied">ID copied</string>
    <string name="enter_receiver_id">Enter receiver ID!</string>
    <string name="id_must_contain_exactly_10_digits">ID must contain exactly 10 digits!</string>
    <string name="file_is_not_selected">The file is not selected!</string>
    <string name="user_has_not_been_found">The user has not been found!</string>
    <string name="user_is_not_logged_in">The user is not logged in</string>
    <string name="file_sharing_app">FILE SHARING APP</string>
    <string name="history">HISTORY</string>
    <string name="share_id">Share ID</string>
    <string name="file_search">File search…</string>
    <string name="senders_data_has_not_been_received">Sender\'s data has not been received!</string>
    <string name="waiting_for_a_file">Waiting for a file…</string>
    <string name="file_was_not_found">The file was not found!</string>
    <string name="link_to_the_file_was_not_received">The link to the file was not received!</string>
    <string name="uploading_a_file">Uploading a file…</string>
    <string name="file_is_saved">The file is saved!</string>
    <string name="file_could_not_be_created">The file could not be created!</string>
    <string name="enter_sender_id_lk">Enter sender ID!</string>
    <string name="file_was_received_successfully">The file was received successfully!</string>
    <string name="file_has_been_sent_successfully">The file has been sent successfully!</string>
    <string name="history_is_empty">History is empty</string>
    <string name="close">CLOSE</string>
    <string name="transfer_info">%1$s -> %2$s</string>
    <string name="permission_is_required_to_save_files">Permission is required to save files</string>
    <string name="file_size_exceeds_limit">File size exceeds the limit of 5 MB!</string>
</resources>